--- a/views/admin/mixins/alert.pug
+++ b/views/admin/mixins/alert.pug
@@ -8,4 +8,13 @@ mixin alert-success()
             | #{messages.success}
             button(class="btn btn-danger btn-sm" close-alert)
                 i.fa-solid.fa-xmark
-            
+mixin alert-error()
+  - if (messages.error)
+      div(
+        class="alert alert-danger"
+        show-alert
+        data-time = "3000"
+        )
+        | #{messages.error}
+        button(class = "btn btn-danger btn-sm" close-alert)
+            i.fa-solid.fa-xmark
