--- a/views/admin/mixins/search.pug
+++ b/views/admin/mixins/search.pug
@@ -3,7 +3,7 @@ mixin search(keyword)
     .input-group
       input(
         type="text"
-        placeholder="Nhập từ khóa"
+        placeholder="Nhập tên công ty"
         name="keyword"
         class="form-control"
         value=keyword
