--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -8,5 +8,10 @@
       li
         a(href=`/${prefixAdmin}/jobs-category`) Danh mục công việc
       li
+        a(href=`/${prefixAdmin}/roles`) Nhóm quyền
+      li
+        a(href=`/${prefixAdmin}/roles/permissions`) Phân quyền
+      li
         a(href=`/${prefixAdmin}/blogs`) Blog
-      
+      li
+        a(href=`/${prefixAdmin}/accounts`) Tài khoản
