--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -8,18 +8,20 @@ html
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css")
 
   body
+    if(role.permissions.length > 0)
+      include ../partials/header.pug
 
-    include ../partials/header.pug
+      .body
 
-    .body
+        include ../partials/sider.pug
 
-      include ../partials/sider.pug
+        .main
+          block main
 
-      .main
-        block main
-
-    script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js") 
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
-    script(src="/tinymce/tinymce.min.js")
-    script(src="/admin/js/tinymce-config.js")
-    script(src= "/admin/js/script.js")
+      script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js") 
+      script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
+      script(src="/tinymce/tinymce.min.js")
+      script(src="/admin/js/tinymce-config.js")
+      script(src= "/admin/js/script.js")
+    else 
+      h1 Không có quyền truy cập
