--- a/views/admin/pages/accounts/edit.pug
+++ b/views/admin/pages/accounts/edit.pug
@@ -2,103 +2,104 @@ extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 
 block main
-  h1(class="mb-4") Cập nhật tài khoản
+  if(role.permissions.includes("accounts_edit"))
+    h1(class="mb-4") Cập nhật tài khoản
 
-  +alert-success(5000)
-  +alert-error(5000)
+    +alert-success(5000)
+    +alert-error(5000)
 
-  form(
-    action=`/${prefixAdmin}/accounts/edit/${dataAccount.id}?_method=PATCH`
-    method="POST"
-    enctype="multipart/form-data"
-  )
-    div(class="form-group")
-      label(for="fullName") Họ tên *
-      input(
-        type="text"
-        class="form-control"
-        id="fullName"
-        name="fullName"
-        required
-        value=dataAccount.fullName
-      )
-    div(class="form-group")
-      label(for="email") Email *
-      input(
-        type="email"
-        class="form-control"
-        id="email"
-        name="email"
-        required
-        value=dataAccount.email
-      )
-    div(class="form-group")
-      label(for="password") Mật khẩu
-      input(
-        type="password"
-        class="form-control"
-        id="password"
-        name="password"
-        value=dataAccount.password
-      )
-    div(class="form-group")
-      label(for="phone") Số điện thoại
-      input(
-        type="text"
-        class="form-control"
-        id="phone"
-        name="phone"
-        value=dataAccount.phone
-      )
-    div(
-      class="form-group"
-      upload-image
+    form(
+      action=`/${prefixAdmin}/accounts/edit/${dataAccount.id}?_method=PATCH`
+      method="POST"
+      enctype="multipart/form-data"
     )
-      label(for="avatar") Avatar
-      input(
-        type="file"
-        class="form-control-file"
-        id="avatar"
-        name="avatar"
-        accept="image/*"
-        upload-image-input
+      div(class="form-group")
+        label(for="fullName") Họ tên *
+        input(
+          type="text"
+          class="form-control"
+          id="fullName"
+          name="fullName"
+          required
+          value=dataAccount.fullName
+        )
+      div(class="form-group")
+        label(for="email") Email *
+        input(
+          type="email"
+          class="form-control"
+          id="email"
+          name="email"
+          required
+          value=dataAccount.email
+        )
+      div(class="form-group")
+        label(for="password") Mật khẩu
+        input(
+          type="password"
+          class="form-control"
+          id="password"
+          name="password"
+          value=dataAccount.password
+        )
+      div(class="form-group")
+        label(for="phone") Số điện thoại
+        input(
+          type="text"
+          class="form-control"
+          id="phone"
+          name="phone"
+          value=dataAccount.phone
+        )
+      div(
+        class="form-group"
+        upload-image
       )
-      img(
-        src=dataAccount.avatar
-        class="image-preview"
-        upload-image-preview
-      )
-    div(class="form-group")
-      label(for="role_id") Phân quyền
-      select(name="role_id" id="role_id" class="form-control")
-        option(disabled) -- Chọn --
-        each item in roles
-          option(
-            value=item.id
-            selected=(item.id == dataAccount.role_id ? true : false)
-          ) #{item.title}
-    div(class="form-group form-check form-check-inline")
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusActive"
-        name="status"
-        value="active"
-        checked=(dataAccount.status === "active" ? true : false)
-      )
-      label(for="statusActive" class="form-check-label") Hoạt động
-    div(class="form-group form-check form-check-inline")
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusInActive"
-        name="status"
-        value="inactive"
-        checked=(dataAccount.status === "inactive" ? true : false)
-      )
-      label(for="statusInActive" class="form-check-label") Dừng hoạt động
-    div(class="form-group")
-      button(
-        type="submit"
-        class="btn btn-primary"
-      ) Cập nhật
+        label(for="avatar") Avatar
+        input(
+          type="file"
+          class="form-control-file"
+          id="avatar"
+          name="avatar"
+          accept="image/*"
+          upload-image-input
+        )
+        img(
+          src=dataAccount.avatar
+          class="image-preview"
+          upload-image-preview
+        )
+      div(class="form-group")
+        label(for="role_id") Phân quyền
+        select(name="role_id" id="role_id" class="form-control")
+          option(disabled) -- Chọn --
+          each item in roles
+            option(
+              value=item.id
+              selected=(item.id == dataAccount.role_id ? true : false)
+            ) #{item.title}
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusActive"
+          name="status"
+          value="active"
+          checked=(dataAccount.status === "active" ? true : false)
+        )
+        label(for="statusActive" class="form-check-label") Hoạt động
+      div(class="form-group form-check form-check-inline")
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusInActive"
+          name="status"
+          value="inactive"
+          checked=(dataAccount.status === "inactive" ? true : false)
+        )
+        label(for="statusInActive" class="form-check-label") Dừng hoạt động
+      div(class="form-group")
+        button(
+          type="submit"
+          class="btn btn-primary"
+        ) Cập nhật
