--- a/views/admin/pages/accounts/index.pug
+++ b/views/admin/pages/accounts/index.pug
@@ -1,86 +1,93 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 block main
-  h1(class="mb-4") Danh sách tài khoản
+  
   +alert-success(5000)
   +alert-error(5000)
-  .card.mb-3
-    .card-header Danh sách
-    .card-body
-      .row
-        .col-8
-        .col-4.text-right
-          a(
-            href=`/${prefixAdmin}/accounts/create`
-            class="btn btn-outline-success"
-          ) + Thêm mới
-      table(
-        class="table table-hover table-sm"
-      )
-        thead
-          tr
-            th STT
-            th Avatar
-            th Họ tên
-            th Phân quyền
-            th Email
-            th Trạng thái
-            th Hành động
-
-        tbody
-          each item, index in records
-            tr 
-              td #{index+1}
-              td
-                img(
-                  src=item.avatar
-                  alt=item.fullName
-                  width="100px"
-                  height="auto"
-                )
-              td #{item.fullName}
-              td #{item.roleTitle}
-              td #{item.email}
-              td
-                if (item.status === "active")
+  if(role.permissions.includes("accounts_view"))
+    h1(class="mb-4") Danh sách tài khoản
+    .card.mb-3
+      .card-header Danh sách
+      .card-body
+        .row
+          .col-8
+          .col-4.text-right
+            if(role.permissions.includes("accounts_create"))
+              a(
+                href=`/${prefixAdmin}/accounts/create`
+                class="btn btn-outline-success"
+              ) + Thêm mới
+        table(
+          class="table table-hover table-sm"
+        )
+          thead
+            tr
+              th STT
+              th Avatar
+              th Họ tên
+              th Phân quyền
+              th Email
+              if(role.permissions.includes("accounts_status"))
+                th Trạng thái
+              if(role.permissions.includes("accounts_edit") || role.permissions.includes("accounts_delete"))
+                th Hành động
+          tbody
+            each item, index in records
+              tr 
+                td #{index+1}
+                td
+                  img(
+                    src=item.avatar
+                    alt=item.fullName
+                    width="100px"
+                    height="auto"
+                  )
+                td #{item.fullName}
+                td #{item.roleTitle}
+                td #{item.email}
+                if(role.permissions.includes("accounts_status"))
+                  td
+                    if (item.status === "active")
+                      a(
+                        href="javascript:;"
+                        class="badge badge-success"
+                        data-status="inactive"
+                        data-id=item.id
+                        button-change-status-account
+                      ) Hoạt động
+                    else
+                      a(
+                        href="javascript:;"
+                        class="badge badge-danger"
+                        data-status="active"
+                        data-id=item.id
+                        button-change-status-account
+                      ) Dừng hoạt động
+                td
                   a(
-                    href="javascript:;"
-                    class="badge badge-success"
-                    data-status="inactive"
-                    data-id=item.id
-                    button-change-status-account
-                  ) Hoạt động
-                else
-                  a(
-                    href="javascript:;"
-                    class="badge badge-danger"
-                    data-status="active"
-                    data-id=item.id
-                    button-change-status-account
-                  ) Dừng hoạt động
-              td
-                a(
-                  class="btn btn-secondary btn-sm"
-                  href=`/${prefixAdmin}/accounts/detail/${item.id}`
-                ) Chi tiết
-                a(
-                  class="btn btn-warning btn-sm ml-1"
-                  href=`/${prefixAdmin}/accounts/edit/${item.id}`
-                ) Sửa
-                button(
-                  class="btn btn-danger btn-sm ml-1"
-                  data-id=item.id
-                  button-delete-account
-                ) Xóa
-  form(
-      form-change-status-account
-      method="POST"
-      action=""
-      data-path="/admin/accounts/change-status"
-      )
-  form(
-      form-delete-account
-      method="POST"
-      action=""
-      data-path="/admin/accounts/delete"
-    ) 
+                    class="btn btn-secondary btn-sm"
+                    href=`/${prefixAdmin}/accounts/detail/${item.id}`
+                  ) Chi tiết
+                  if(role.permissions.includes("accounts_edit"))
+                    a(
+                      class="btn btn-warning btn-sm ml-1"
+                      href=`/${prefixAdmin}/accounts/edit/${item.id}`
+                    ) Sửa
+                  if(role.permissions.includes("accounts_delete"))
+                    button(
+                      class="btn btn-danger btn-sm ml-1"
+                      data-id=item.id
+                      button-delete-account
+                    ) Xóa
+    form(
+        form-change-status-account
+        method="POST"
+        action=""
+        data-path="/admin/accounts/change-status"
+        )
+    form(
+        form-delete-account
+        method="POST"
+        action=""
+        data-path="/admin/accounts/delete"
+      ) 
