--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -1,3 +1,5 @@
 extends ../../layouts/default
 block main
     h1 Trang tổng quan
+    div #{`Tên : ${user.fullName}`}
+    div #{`Quyền hạn : ${role.title}`}
