--- a/views/admin/pages/job/index.pug
+++ b/views/admin/pages/job/index.pug
@@ -5,110 +5,112 @@ include ../../mixins/pagination.pug
 include ../../mixins/alert.pug
 block main
   +alert-success()
-  h1(class="mb-4") Danh sách công việc
-  .card.mb-3
-    .card-header Bộ lọc và Tìm kiếm
-    .card-body
-      .row
-        .col-6
-          +filter(filterStatus)
-        .col-6
-          +search(keyword)
-  .card.mb-3
-    .card-header Danh sách
-    .card-body
-      form(
-        action=`/${prefixAdmin}/jobs/change-multi?_method=PATCH`
-        method="POST"
-				form-change-multi
-      ) 
-        .d-flex.align-items-start
-          .form-group
-            select(name="type" class="form-control")
-              option(value="active") Hoạt động
-              option(value="inactive") Dừng hoạt động
-              option(value="delete-all") Xóa tất cả
-          .form-group.d-none
-            input(
-              type="text"
-              name="ids"
-              value=""
-              class="form-control"
-            )
-          button(type="submit" class="btn btn-primary") Áp dụng
+  if(role.permissions.includes("jobs_view"))
+    h1(class="mb-4") Danh sách công việc
+    .card.mb-3
+      .card-header Bộ lọc và Tìm kiếm
+      .card-body
+        .row
+          .col-6
+            +filter(filterStatus)
+          .col-6
+            +search(keyword)
+    .card.mb-3
+      .card-header Danh sách
+      .card-body
+        form(
+          action=`/${prefixAdmin}/jobs/change-multi?_method=PATCH`
+          method="POST"
+          form-change-multi
+        ) 
+          .d-flex.align-items-start
+            .form-group
+              select(name="type" class="form-control")
+                option(value="active") Hoạt động
+                option(value="inactive") Dừng hoạt động
+                option(value="delete-all") Xóa tất cả
+            .form-group.d-none
+              input(
+                type="text"
+                name="ids"
+                value=""
+                class="form-control"
+              )
+            button(type="submit" class="btn btn-primary") Áp dụng
 
-      table(
-        class="table table-hover table-sm"
-        checkbox-multi
-      )
-        thead
-          tr
-            td
-              input(type="checkbox" name="checkall")
-            th STT
-            th Hình ảnh
-            th Tên công ty
-            th Công việc
-            th Vị trí
-            th Loại công việc
-            th Mức lương
-            th Trạng thái
-            th Hành động
-
-        tbody
-        each item, index in jobs
+        table(
+          class="table table-hover table-sm"
+          checkbox-multi
+        )
+          thead
             tr
-              td 
-                input(type="checkbox" name="id" value=item.id)
-              td #{objectPagination.limitItems * (objectPagination.currentPage - 1)+ index + 1}
               td
-                img(
-                  src=item.thumbnail
-                  alt=item.title
-                  width="100px"
-                  height="auto"
-                )
-              td #{item.companyName}
-              td #{item.title}
-              td #{item.location}
-              td #{item.typejob}
-              td #{item.salary}$
-              td
-                if(item.status == "active")
-                  
-                  a(href=`javascript:;`
-                    class="badge badge-success" 
-                    button-change-status 
-                    data-id=item.id
-                    data-status="inactive"
-                    ) Hoạt động
-                else
-                  a(href=`javascript:;`
-                    class="badge badge-danger"
-                    button-change-status
-                    data-id=item.id
-                    data-status="active"
-                    ) Dừng hoạt động
-              td
-                button(
-                  class="btn btn-danger btn-sm ml-1"
-                  button-delete
-                  data-id=item.id
-                  ) Xóa
-                a(
-                  href=`/${prefixAdmin}/jobs/detail/${item.id}`
-                  class="btn btn-info btn-sm ml-1"
-                  ) Chi tiết
-      +pagination(objectPagination)
-      form(
-        form-change-status
-        method="POST"
-        action=""
-        data-path="/admin/jobs/change-status"
-      )
-      form(
-        form-delete
-        method="POST"
-        action=""
-        data-path="/admin/jobs/delete"
-      )
+                input(type="checkbox" name="checkall")
+              th STT
+              th Hình ảnh
+              th Tên công ty
+              th vị trí tuyển dụng
+              th Vị trí công ty
+              th Kĩ năng
+              th Mức lương
+              if(role.permissions.includes("jobs_status"))
+                th Duyệt bài
+              th Hành động
+          tbody
+          each item, index in jobs
+              tr
+                td 
+                  input(type="checkbox" name="id" value=item.id)
+                td #{objectPagination.limitItems * (objectPagination.currentPage - 1)+ index + 1}
+                td
+                  img(
+                    src=item.thumbnail
+                    alt=item.title
+                    width="100px"
+                    height="auto"
+                  )
+                td #{item.companyName}
+                td #{item.title}
+                td #{item.viTri}
+                td #{item.kiNang}
+                td #{item.salary}$
+                if(role.permissions.includes("jobs_status"))
+                  td
+                    if(item.status == "active")
+                      a(href=`javascript:;`
+                        class="badge badge-success" 
+                        button-change-status 
+                        data-id=item.id
+                        data-status="inactive"
+                        ) Đã duyệt
+                    else
+                      a(href=`javascript:;`
+                        class="badge badge-danger"
+                        button-change-status
+                        data-id=item.id
+                        data-status="active"
+                        ) Chưa duyệt
+                td
+                  if(role.permissions.includes("jobs_delete"))
+                    button(
+                      class="btn btn-danger btn-sm ml-1"
+                      button-delete
+                      data-id=item.id
+                      ) Xóa
+                  a(
+                    href=`/${prefixAdmin}/jobs/detail/${item.id}`
+                    class="btn btn-info btn-sm ml-1"
+                    ) Chi tiết
+        +pagination(objectPagination)
+        form(
+          form-change-status
+          method="POST"
+          action=""
+          data-path="/admin/jobs/change-status"
+        )
+        form(
+          form-delete
+          method="POST"
+          action=""
+          data-path="/admin/jobs/delete"
+        )
