--- a/views/admin/pages/roles/edit.pug
+++ b/views/admin/pages/roles/edit.pug
@@ -2,35 +2,38 @@ extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 
 block main
-  h1(class="mb-4") Chỉnh sửa nhóm quyền
-  +alert-success(5000)
-  +alert-error(5000)
+  if(role.permissions.includes("roles_edit"))
+    h1(class="mb-4") Chỉnh sửa nhóm quyền
+    +alert-success(5000)
+    +alert-error(5000)
 
-  form(
-    action=`/${prefixAdmin}/roles/edit/${dataRole.id}?_method=PATCH`
-    method="POST"
-  )
-    div(class="form-group")
-      label(for="title") Tiêu đề
-      input(
-        type="text"
-        class="form-control"
-        id="title"
-        name="title"
-        required
-        value=dataRole.title
-      )
-    div(class="form-group")
-      label(for="desc") Mô tả
-      input(
-        type="text"
-        class="form-control"
-        id="desc"
-        name="description"
-        value=dataRole.description
-      )
-    div(class="form-group")
-      button(
-        type="submit"
-        class="btn btn-primary"
-      ) Cập nhật
+    form(
+      action=`/${prefixAdmin}/roles/edit/${dataRole.id}?_method=PATCH`
+      method="POST"
+    )
+      div(class="form-group")
+        label(for="title") Tiêu đề
+        input(
+          type="text"
+          class="form-control"
+          id="title"
+          name="title"
+          required
+          value=dataRole.title
+        )
+      div(class="form-group")
+        label(for="desc") Mô tả
+        input(
+          type="text"
+          class="form-control"
+          id="desc"
+          name="description"
+          value=dataRole.description
+        )
+      div(class="form-group")
+        button(
+          type="submit"
+          class="btn btn-primary"
+        ) Cập nhật
+  else 
+    h2 Bạn không có quyền truy cập
