--- a/views/admin/pages/roles/index.pug
+++ b/views/admin/pages/roles/index.pug
@@ -8,11 +8,11 @@ block main
       .row
         .col-8
         .col-4.text-right
-          a(
-            href=`/${prefixAdmin}/roles/create`
-            class="btn btn-outline-success"
-          ) + Thêm mới
-
+          if(role.permissions.includes("roles_create"))
+            a(
+              href=`/${prefixAdmin}/roles/create`
+              class="btn btn-outline-success"
+            ) + Thêm mới
       table(
         class="table table-hover table-sm"
       )
@@ -21,6 +21,7 @@ block main
             th STT
             th Nhóm quyền
             th Mô tả ngắn
+            th Tạo bởi
             th Hành động
 
         tbody
@@ -30,20 +31,25 @@ block main
                 td #{index + 1}
                 td #{item.title}
                 td #{item.description}
+                td 
+                  div #{item.createByFullName}
+                  div #{moment(item.createdAt).format("DD/MM/YYYY HH:mm")}
                 td
                   a(
                     class="btn btn-secondary btn-sm"
                     href=`/${prefixAdmin}/roles/detail/${item.id}`
                   ) Chi tiết
-                  a(
-                    class="btn btn-warning btn-sm ml-1"
-                    href=`/${prefixAdmin}/roles/edit/${item.id}`
-                  ) Sửa
-                  button(
-                    class="btn btn-danger btn-sm ml-1"
-                    data-id=item.id
-                    button-delete-role 
-                  ) Xóa
+                  if(role.permissions.includes("roles_edit"))
+                    a(
+                      class="btn btn-warning btn-sm ml-1"
+                      href=`/${prefixAdmin}/roles/edit/${item.id}`
+                    ) Sửa
+                  if(role.permissions.includes("roles_delete"))
+                    button(
+                      class="btn btn-danger btn-sm ml-1"
+                      data-id=item.id
+                      button-delete-role 
+                    ) Xóa
           else
             tr
               td(colspan="4" class="text-center") Chưa có nhóm quyền nào được tạo.
