--- a/views/admin/pages/job/index.pug
+++ b/views/admin/pages/job/index.pug
@@ -49,7 +49,7 @@ block main
               th STT
               th Hình ảnh
               th Tên công ty
-              th vị trí tuyển dụng
+              th Vị trí tuyển dụng
               th Vị trí công ty
               th Kĩ năng
               th Mức lương
@@ -74,6 +74,7 @@ block main
                 td #{item.viTri}
                 td #{item.kiNang}
                 td #{item.salary}$
+                
                 if(role.permissions.includes("jobs_status"))
                   td
                     if(item.status == "active")
