--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,3 +1,5 @@
+include ../mixins/sub-menu.pug
+
 #wrapper
   #header
     nav.container
@@ -6,51 +8,25 @@
         |  TUYỂN DỤNG
       ul#main-menu
         li
-          a(href='/') Trang Ch&#x1EE7;
+          a(href='/') Trang Chủ
         li
-          a(href='/job') Vi&#x1EC7;c L&agrave;m
+          a(href='/job') Việc làm
           ul.sub-menu
             li
-              a(href='') K&#x1EF9; N&abreve;ng
-              ul.sub-menu
-                li
-                  a(href='jobs.html') JavaScript
-                li
-                  a(href='jobs.html') C#
-                li
-                  a(href='jobs.html') .NET
-                li
-                  a(href='jobs.html') PyThon
-                li
-                  a(href='jobs.html') PHP
-                li
-                  a(href='jobs.html') Game
-                li
-                  a(href='jobs.html') IOS
-                li
-                  a(href='jobs.html') Android
-                li
-                  a(href='jobs.html') UI/UX
+              a(href='') Kĩ năng
+              ul.sub-menu 
+                +sub-menu(layoutJobCategory)
             li
-              a(href='') Khu V&#x1EF1;c
-              ul.sub-menu
-                li
-                  a(href='jobsLocationHaNoi.html') H&agrave; N&#x1ED9;i
-                li
-                  a(href='jobsLocationHCM.html') Th&agrave;nh Ph&#x1ED1; H&#x1ED3; Ch&iacute; Minh
-                li
-                  a(href='jobsLocationĐaNang.html') &Dstrok;&agrave; N&#x1EB5;ng
-                li
-                  a(href='jobsLocationCanTho.html') C&#x1EA7;n Th&#x1A1;
-                li
-                  a(href='jobs.html') C&aacute;c T&#x1EC9;nh Th&agrave;nh Kh&aacute;c
+              a(href='') Khu vực
+              ul.sub-menu 
+                +sub-menu(layoutPositionCategory)
         li
-          a(href='company.html') C&ocirc;ng Ty
+          a(href='company.html') Công ty
         li
-          a(href='blog.html') Blog Vi&#x1EC7;c L&agrave;m
+          a(href='blog.html') Blog Việc làm
         li
-          a(href='employer.html') Nh&agrave; Tuy&#x1EC3;n D&#x1EE5;ng
+          a(href='employer.html') Nhà tuyển dụng
         li
-          a(href='login.html') &Dstrok;&abreve;ng Nh&#x1EAD;p
+          a(href='login.html') Đăng nhập
         li
-          a(href='register.html') &Dstrok;&abreve;ng K&yacute;
+          a(href='register.html') Đăng kí
