Chỉnh sửa trang chủ bên admin

--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -417,7 +417,7 @@ ul, ul.sub-menu, ul.sub-menu li {
 .company-container .company-heading{
     color: green;
     margin-top: 30px;
-    margin-left: 410px;
+    margin-left: 140px;
     font-size: 40px;
     margin-bottom: 50px;
 
@@ -431,7 +431,7 @@ ul, ul.sub-menu, ul.sub-menu li {
     justify-content: center;
 }
 .company-container .box-container .box{
-    background-color: #B5FFC9;
+    background: linear-gradient(to right, #4daf54, #3d8880);
     border-radius: .5rem;
     padding: 15px;
     box-shadow: 0 .5rem 1rem rgba(0,0,0);
@@ -445,9 +445,10 @@ ul, ul.sub-menu, ul.sub-menu li {
     margin-bottom: 1.5rem;
 }
 .company-container .box-container .box .company img{
-    height: 70px;
-    width: 70px;
+    height: 100px;
+    width: 135px;
     object-fit: contain;
+    background: #ffff;
 }
 .foot{
     display: flex;
@@ -717,5 +718,7 @@ ul, ul.sub-menu, ul.sub-menu li {
     font-size:25px;
     padding-right: 5px;
 }
-
+.box .fa-money-bill{
+    padding-left: 20px;
+}
 /*  end detail applicant icon*/
