--- a/views/admin/pages/job/index.pug
+++ b/views/admin/pages/job/index.pug
@@ -26,8 +26,9 @@ block main
           .d-flex.align-items-start
             .form-group
               select(name="type" class="form-control")
-                option(value="active") Hoạt động
-                option(value="inactive") Dừng hoạt động
+                option(value="active") Duyệt bài
+                option(value="1") Nổi bật
+                option(value="0") Dừng nổi bật
                 option(value="delete-all") Xóa tất cả
             .form-group.d-none
               input(
