--- a/public/employer/css/style.css
+++ b/public/employer/css/style.css
@@ -150,41 +150,6 @@ nav{
     text-align: center;
     color: rgb(1, 57, 18);
 }
-.btn{
-    text-decoration: none;
-    margin-top: 1rem;
-    background: rgb(0, 62, 25);
-    color: white;
-    display: inline-block;
-    border-radius: 5rem;
-    box-shadow: black;
-    padding: 1rem 2rem;
-    font-size: 17px;
-    position: relative;
-    z-index: 0;
-    overflow: hidden;
-}
-.btn::before,
-.btn::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 0%;
-    background:  #07A76B;
-    z-index: -1;
-    transition: .5s liner;
-}
-.btn::before{
-    left: 0;
-}
-.btn::after{
-    right: 0;
-}
-.btn:hover::before,
-.btn:hover::after{
-    width: 100%;
-}
 /*Home*/
 .home{
     background: url(img/istockphoto-1323860984-612x612.jpg) no-repeat;
@@ -717,7 +682,7 @@ nav{
 }
 
 h2 {
-    text-align: center;
+    margin-left: 130px;
     font-size: 20px;
     margin-bottom: 20px;
 }
@@ -773,15 +738,6 @@ footer{
     width:100%;
     min-height: 20vh;
     padding: 3rem 1rem;
-}
-
-.footer_container{
-    max-width: 1140px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 .row{
     display: flex;
@@ -913,3 +869,635 @@ footer{
 display: none;
 }
 /* end img-preview */
+
+
+/* find home */
+.home{
+    background-image: url(http://res.cloudinary.com/dql6irmti/image/upload/v1717219463/jatt48ha6brzg5cuyu1a.jpg);
+    align-items: center;
+    min-height: 80vh;
+    background-size: cover;
+    background-position: center;
+}
+.home .content{
+    margin-left: 230px;
+}
+.home .content h3{
+    font-size: 5rem;
+    color: white;
+    line-height: 1.2;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: .5rem;
+    padding-bottom: 2rem;
+}
+.btn{
+    text-decoration: none;
+    margin-top: 1rem;
+    background-color: red;
+    color: white;
+    display: inline-block;
+    border-radius: 3rem;
+    box-shadow: black;
+    padding: .5rem 1rem;
+    font-size: 15px;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    margin-bottom: 30px;
+    border:none;
+}
+.btn::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 0%;
+    background-color:#3CB371;
+    z-index: -1;
+    transition: .5s liner;
+    color: white;
+}
+.btn::before{
+    left: 0;
+}
+.btn::after{
+    right: 0;
+    
+}
+.btn:hover::before,
+.btn:hover::after{
+    width: 100%;
+}
+
+/* end find home */
+/* css job */
+.flex-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 1rem;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+}
+.btn:hover{
+    color: black;
+}
+.flex-btn .btn:hover{
+    color: white;
+}
+.jobs-heading{
+    color: white;
+    text-align: center;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.jobs-container .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 30rem);
+    gap: 1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+.jobs-container .box-container .box{
+    background-color: white;
+    border-radius: .5rem;
+    padding: 2rem 2rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0);
+    overflow-x: hidden;
+
+}
+.jobs-container .box-container .box .body{
+    background-color: rgb(240, 255, 240);
+    padding: 15px;
+}
+.jobs-container .box-container .box .company{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+.jobs-container .box-container .box .company img{
+    height: 7rem;
+    width: 7rem;
+    object-fit: contain;
+}
+.jobs-container .box-container .box .company h3{
+    font-size: 17px;
+    color: black;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    text-transform: capitalize;
+    padding-bottom: .5rem;
+}
+.jobs-container .box-container .box .company span{
+    color: black;
+    font-size: 16px;
+}
+.jobs-container .box-container .box .job-title{
+    font-size: 20px;
+    color: black;
+    text-transform: capitalize;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+}
+.jobs-container .box-container .box .location{
+    padding: .7rem 0;
+    font-size: 17px;
+    color: black;
+}
+.jobs-container .box-container .box .location i{
+    margin-right: .3rem;
+    color: rgb(75, 102, 239);
+}
+.jobs-container .box-container .box .tags{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1.5rem 0;
+}
+.jobs-container .box-container .box .fa-heart{
+    background-color: rgb(237, 236, 236);
+    border-radius: .1rem;
+    color: black;
+    font-size: 1.4rem;
+    cursor: pointer;
+    height: 2rem;
+    width: 2.5rem;
+    line-height: 2rem;
+}
+.jobs-container .box-container .box .fa-heart:hover{
+    background-color: rgb(0, 84, 36);
+    color: white;
+}
+ul, ul.sub-menu, ul.sub-menu li {
+    list-style-type: none;
+}
+/* end css job */
+
+/* phần nội dung */
+.search{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 10vh;
+    padding-top: 10px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+#search-box{
+    background:  rgb(215, 254, 222);
+    border-radius: 30px;
+}
+
+#search-box #search-text{
+    border: none;
+    outline: none;
+    background: green;
+    padding: 10px 15px;
+    font-size: 17px;
+    width: 0;
+    padding: 0;
+    transition: all 0.25s ease-in-out;
+    background-color: rgb(215, 254, 222);
+    border-radius: 30px;
+}
+#search-box:hover #search-text, #search-box #search-text:valid{
+    width: 300px;
+    padding: 10px 0px 10px 15px;    
+}
+
+#search-box #search-btn{
+    background-color: rgb(215, 254, 222);
+    cursor: pointer;
+    border: none;
+    padding: 15px;
+    border-radius: 30px;
+    font-size: 16px;
+}
+#search-box #search-btn:hover{
+    background-color: rgb(215, 254, 222);
+}
+
+.flex-btn{
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+}
+.btn:hover{
+    background-color: #27D657;
+}
+.flex-btn .btn:hover{
+    color: white
+}
+.company-container .company-heading{
+    color: green;
+    margin-top: 30px;
+    font-size: 40px;
+    margin-bottom: 50px;
+
+}
+
+.company-container .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 30rem);
+    gap: 1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+.company-container .box-container .box{
+    background: linear-gradient(to right, #4daf54, #3d8880);
+    border-radius: .5rem;
+    padding: 15px;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0);
+    overflow-x: hidden;
+    margin-bottom: 30px;
+}
+.company-container .box-container .box .company{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+.company-container .box-container .box .company img{
+    height: 100px;
+    width: 135px;
+    object-fit: contain;
+    background: #ffff;
+}
+.foot{
+    justify-content: space-between;
+}
+.company-container .box-container .box .company h3{
+    font-size: 25px;
+    color: black;
+    text-overflow: ellipsis;
+    font-weight:600;
+    overflow-x: hidden;
+    text-transform: capitalize;
+    padding-bottom: .5rem;
+}
+.company-container .box-container .box .location{
+    padding: .7rem 0;
+    font-size: 17px;
+    color: black;
+}
+.company-container .box-container .box .location i{
+    margin-right: .3rem;
+    color: rgb(56, 56, 58);
+}
+.company-container .box-container .box .fa-heart{
+    background-color: rgb(237, 236, 236);
+    border-radius: .1rem;
+    color: black;
+    font-size: 15px;
+    cursor: pointer;
+    height: 2rem;
+    width: 2rem;
+    line-height: 1.5rem;
+    border: none;
+    margin-top: 20px;
+}
+.company-container .box-container .box .fa-heart:hover{
+    background-color: green;
+    color: white;
+}
+/* page detail */
+.view-company .heading{
+    text-align: center;
+    color: rgb(0, 0, 0);
+    padding: 2rem 2rem;
+    font-size: 40px;
+}
+.view-company .details{
+    background-color: white;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0);
+    border: .1rem solid rgba(0,0,0, .2);
+    border-radius: .5rem;
+    background-color: white;
+    padding: 2rem 3rem;
+    margin: 0px 300px 20px 300px;
+}
+.view-company .details .info{
+    max-width: 30rem;
+    margin: 0 auto;
+    border-radius: .6rem;
+    background-color: rgb(215, 254, 222);
+    padding: 3rem 1rem;
+    text-align: center;
+}
+
+.view-company .details .info img{
+    object-fit: contain;
+    margin-bottom: 1rem;
+    height: 100%;
+    width: 100%;
+}
+
+.view-company .details .info h3{
+    padding: 1rem 0;
+    font-size: 2rem;
+    color: black
+}
+.view-company .details .info p{
+    font-size: 16px;
+    color: black;
+}
+.view-company .details .description h3{
+    font-size: 2rem;
+    color: black;
+    padding: 10px 0;
+    margin-left: 100px;
+    
+}
+.view-company .details .description p{
+    padding: .5px 0;
+    font-size: 16px;
+    color: black;
+    line-height: 1.8;
+}
+.view-company .details ul li{
+    margin-left: 30px;
+    font-size: 16px;
+    color: black;
+    padding-top: 15px;
+}
+/*----*/
+.flex-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 1rem;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+}
+.btn:hover{
+    color: white;
+}
+.flex-btn .btn:hover{
+    color: blue;
+}
+.jobs-heading{
+    color: white;
+    text-align: center;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.jobs-container .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 30rem);
+    gap: 1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+.jobs-container .box-container .box{
+    background-color: white;
+    border-radius: .5rem;
+    padding: 2rem 2rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0);
+    overflow-x: hidden;
+    margin-bottom: 10px;
+}
+.jobs-container .box-container .box .company{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+.jobs-container .box-container .box .company img{
+    height: 7rem;
+    width: 7rem;
+    object-fit: contain;
+}
+.jobs-container .box-container .box .company h3{
+    font-size: 17px;
+    color: black;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    text-transform: capitalize;
+    padding-bottom: .5rem;
+}
+.jobs-container .box-container .box .company span{
+    color: black;
+    font-size: 16px;
+}
+.jobs-container .box-container .box .job-title{
+    font-size: 20px;
+    color: black;
+    text-transform: capitalize;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+}
+.jobs-container .box-container .box .location{
+    padding: .7rem 0;
+    font-size: 17px;
+    color: black;
+}
+.jobs-container .box-container .box .location i{
+    margin-right: .3rem;
+    color: rgb(75, 102, 239);
+}
+.jobs-container .box-container .box .tags{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1.5rem 0;
+}
+.jobs-container .box-container .box .fa-heart{
+    background-color: rgb(237, 236, 236);
+    border-radius: .1rem;
+    color: black;
+    font-size: 1.2rem;
+    cursor: pointer;
+    height: 2rem;
+    width: 2.5rem;
+    line-height: 2rem;
+}
+.jobs-container .box-container .box .fa-heart:hover{
+    background-color: rgb(75, 102, 239);
+    color: white;
+}
+/* end page detail */
+/* find home */
+.home{
+    background-image: url(http://res.cloudinary.com/dql6irmti/image/upload/v1717219463/jatt48ha6brzg5cuyu1a.jpg);
+    align-items: center;
+    min-height: 80vh;
+    background-size: cover;
+    background-position: center;
+}
+.home .content{
+    margin-left: 230px;
+}
+.home .content h3{
+    font-size: 5rem;
+    color: white;
+    line-height: 1.2;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: .5rem;
+    padding-bottom: 2rem;
+}
+.btn{
+    text-decoration: none;
+    margin-top: 1rem;
+    background: rgb(0, 109, 44);
+    color: white;
+    display: inline-block;
+    border-radius: 3rem;
+    box-shadow: black;
+    padding: .5rem 1rem;
+    font-size: 15px;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    margin-bottom: 30px;
+    border:none;
+}
+.btn::before{
+    left: 0;
+}
+.btn::after{
+    right: 0;
+    
+}
+/* end find home */
+
+/* detail applicant icon*/
+.mb-4{
+    font-size: 17px;
+}
+.mb-4 i{
+    color: green;
+    font-size:25px;
+    padding-right: 5px;
+}
+.box .fa-money-bill{
+    padding-left: 20px;
+}
+.jobs-container h3{
+    font-size: 30px;
+    color: #00B14F;
+    margin-left: 340px;
+}
+/*  end detail applicant icon*/
+/*show-alert*/
+[show-alert]{
+    position: fixed;
+    top: 70px;
+    right: 15px;
+    z-index: 9999;
+  }
+  [show-alert].alert-hidden{
+    animation-name: alert-hidden;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+  }
+  @keyframes alert-hidden{
+    from{
+      right: 15px;
+    }
+    to{
+      right: -100%;
+      display: none;
+    }
+  }
+  .alert .alert-danger .btn .btn-danger .btn-sm:hover{
+    background-color: red;
+  }
+  /* alert button*/
+.myButton{
+    padding: 0px 3px 0px 3px;
+    border: none;
+    color: white;
+    background-color: #DC3543;
+}
+.alert{
+    margin-top: 5px;
+}
+.apply{
+    width: 100px;
+}
+/* detail job */
+.fa-window-minimize{
+    color: #0E9249;
+    font-size: 100px;
+}
+.fa-window-minimize:first-child{
+    margin-right: 100px;
+}
+.fa-eye{
+    color: #0E9249;
+    font-size: 50px;
+    margin-left: -100px;
+}
+
+/*register candidate */
+#wrapper-content{
+    font-size: 20px;
+    min-height: 100vh;
+    margin-top: -30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#form-register{
+    max-width: 500px;
+    background: rgba(255, 255, 255, 0.1);
+    flex-grow: 2;
+    padding: 30px 30px 40px;
+    box-shadow: 0px 0px 17px 2px rgba(0, 0, 0, 0.8);
+}
+
+.accountType{
+    background-color: rgb(0, 0, 255, 0.2);
+    width: 30%;
+    height: 30px;
+    margin-left: 115px;
+    border: 2px;
+    color: black;
+}
+.accountType option{
+    background-color: white;
+    border: none;
+}
+
+.form-heading{
+    font-size: 25px;
+    color: black;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.form-group{
+    color: black;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    align-items: flex-end;
+}
+.form-group i{
+    padding-top: 10px;
+    padding-right: 5px;
+}
+.form-input{
+    background: transparent;
+    border: 0;
+    outline: 0;
+    color: black;
+}
+.form-input::placeholder{
+    color: rgb(14, 13, 13);
+}
+.form-submit{
+    background: transparent;
+    border: 1px solid black;
+    color: black;
+    width: 100%;
+    text-transform: uppercase;
+    padding: 6px 10px;
+    transition: 0.25s ease-in-out;
+    margin-top: 30px;
+}
