--- a/views/client/pages/job/index.pug
+++ b/views/client/pages/job/index.pug
@@ -1,7 +1,16 @@
 extends ../../layouts/default.pug
+include ../../mixins/alert.pug
 block main
+  +alert-error(5000)
   section.jobs-container
-    h1.jobs-heading  Latest Jobs
+    .search
+        form#search-box(action='POST')
+          input#search-text(type='text' placeholder='Nhập công việc bạn muốn tìm...' name="keyword" value=keyword)
+          button#search-btn(type="submit")
+            i.fa-solid.fa-magnifying-glass
+            |  Search
+    if(keyword == "")
+      h2 Không tìm thấy
     .box-container
       each item in records
         .box
@@ -10,15 +19,16 @@ block main
             div
               h2 #{item.companyName}
               span #{moment(item.createdAt).format("DD/MM/YYYY")}
-          p.job-title  #{item.title}
-          p.location
-            i.fa-solid.fa-location-dot
-            | #{item.viTri}
-          div Salary: #{item.salary}$
-          div Kĩ năng: #{item.kiNang}
-          .flex-btn
-            a.btn(href=`/job/detail/${item.id}`)  View details
-            button.far.fa-heart(type='submit' name='save')
+          .body 
+            p.job-title  #{item.title}
+            p.location
+              i.fa-solid.fa-location-dot
+              | #{item.viTri}
+            div Salary: #{item.salary}$
+            div Kĩ năng: #{item.kiNang}
+            .flex-btn
+              a.btn(href=`/job/detail/${item.id}`)  View details
+              button.far.fa-heart(type='submit' name='save')
     br
     br
     br
