--- a/views/employer/pages/applicant/create.pug
+++ b/views/employer/pages/applicant/create.pug
@@ -93,3 +93,8 @@ block main
             .form-group
               input#name(type='name' name='nameHR' placeholder='Tên người liên hệ ...' required='')
             button(type='submit') Đăng bài
+          form(
+            action=`/employer/myApplicant/create`
+            method="POST"
+            type="submit"
+          )
