--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -28,7 +28,7 @@ include ../mixins/sub-menu.pug
           a(href='') Đăng nhập 
           ul.sub-menu
             li
-              a(href='login.html') Ứng viên
+              a(href='/candidate/login') Ứng viên
             li
               a(href='loginEmployer.html') Nhà tuyển dụng
         li
