--- a/views/admin/pages/jobs-category/index.pug
+++ b/views/admin/pages/jobs-category/index.pug
@@ -3,7 +3,7 @@ include ../../mixins/alert.pug
 block main
     +alert-success()
     if(role.permissions.includes("jobs-category_view"))
-        h1(class="mb-4") Danh mục công việc
+        h1(class="mb-4") Danh mục kĩ năng
         .card.mb-3
             .card-header Danh sách
             .card-body
