--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -270,7 +270,8 @@ footer{
     justify-content: space-between;
     column-gap: 1rem;
     flex-wrap: wrap;
-    padding-bottom: 30px;
+    margin-top: 20px;
+    padding-bottom: 20px;
 }
 .btn:hover{
     color: black;
@@ -326,6 +327,7 @@ footer{
 .jobs-container .box-container .box .company span{
     color: black;
     font-size: 16px;
+    margin-left: 129px;
 }
 .jobs-container .box-container .box .job-title{
     font-size: 20px;
@@ -462,7 +464,6 @@ ul, ul.sub-menu, ul.sub-menu li {
     background: #ffff;
 }
 .foot{
-    display: flex;
     justify-content: space-between;
 }
 .company-container .box-container .box .company h3{
@@ -572,7 +573,7 @@ ul, ul.sub-menu, ul.sub-menu li {
     color: white;
 }
 .flex-btn .btn:hover{
-    color: blue;
+    color: white
 }
 .jobs-heading{
     color: white;
@@ -696,7 +697,6 @@ ul, ul.sub-menu, ul.sub-menu li {
     position: relative;
     z-index: 0;
     overflow: hidden;
-    margin-bottom: 30px;
     border:none;
 }
 .btn::after{
@@ -777,7 +777,8 @@ ul, ul.sub-menu, ul.sub-menu li {
     margin-top: 5px;
 }
 .apply{
-    width: 100px;
+    width: 120px;
+    margin-left: 200px;
 }
 /* detail job */
 .fa-window-minimize{
@@ -857,4 +858,78 @@ ul, ul.sub-menu, ul.sub-menu li {
     padding: 6px 10px;
     transition: 0.25s ease-in-out;
     margin-top: 30px;
+}
+
+/*  */
+/*content*/
+.heading{
+    font-size: 40px;
+    margin-top: 20px;
+    text-align: center;
+}
+.form-tuyendung {
+    width: 700px;
+    margin-left: 280px;
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin-bottom: 30px;
+}
+ h2 {
+    margin-left: 130px;
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+
+.form-group1 {
+    margin-bottom: 20px;
+    padding-left: 300px;
+    padding-right: 300px;
+}
+h1{
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+}
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+input, textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+button {
+    font-size: 15px;
+    background-color: #006d26;
+    color: rgb(255, 255, 255);
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-left: 550px;
+    border: 2px solid black;
+    border-radius: 5px;
+    border:none;
+}
+
+.accountType{
+    border-radius: 5px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid rgb(25, 25, 25);
+    margin-top: 5px;
+}
+.accountType option{
+    background-color: white;
+    border: none;
+}
+.register{
+    margin-left: 0px;
+}
+.text-center{
+    margin-left: -10px;
+    align-items: center;
+}
+.myButton{
+    background-color: red;
 }
