--- a/views/client/layouts/default2.pug
+++ b/views/client/layouts/default2.pug
@@ -15,4 +15,6 @@ html
     include ../partials/footer.pug
     script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js") 
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
-    script(src="/candidate/js/script.js")
+    script(src="/tinymce/tinymce.min.js")
+    script(src="/admin/js/tinymce-config.js")
+    script(src="/client/js/script.js")
