--- a/views/client/pages/employer/login.pug
+++ b/views/client/pages/employer/login.pug
@@ -5,17 +5,8 @@ block main
   +alert-error(5000)
   .container.my-5
     .row.justify-content-center
-        form#form-register(action='/candidate/register' method="POST")
-            h2(class="text-center") Đăng ký tài khoản
-            div(class="form-group")
-                label(for="fullName") Họ và tên
-                input(
-                type="text"
-                class="form-control"
-                id="fullName"
-                name="fullName"
-                required
-                )
+        form#form-register(action='/employer/login' method="POST")
+            h2(class="text-center") Đăng nhập tài khoản
             div(class="form-group")
                 label(for="email") Email
                 input(
@@ -34,8 +25,10 @@ block main
                 name="password"
                 required
                 )
+            a(href='CreateNewPw.html')
+                input.pwform-submit(type='submit' value='Quên mật khẩu')
             div(class="form-group")
                 button(
                 type="submit"
                 class="btn btn-primary btn-block register"
-                ) Đăng ký
+                ) Đăng nhập
