--- a/public/candidate/css/style.css
+++ b/public/candidate/css/style.css
@@ -693,6 +693,7 @@ ul, ul.sub-menu, ul.sub-menu li {
     box-shadow: black;
     padding: .5rem 1rem;
     font-size: 15px;
+    margin-left: 0px;
     position: relative;
     z-index: 0;
     overflow: hidden;
@@ -887,3 +888,220 @@ ul, ul.sub-menu, ul.sub-menu li {
     background-color: #D4EDDA;
 }
 
+.btn1{
+    border: none;
+    padding: 3px;
+    border-radius: 2px;
+    margin-left: 0px;
+}
+
+
+/* my posted */
+
+/*Nội dung*/
+.content {
+    width: 650px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding-top: 20px;
+    padding: 2px 2px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+h2 {
+    margin-bottom: 10px;
+}
+
+.input-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="date"],
+input[type="skill"],
+select {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+button {
+    margin-left: 300px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+    color: black;
+}
+
+/*Nội dung*/
+.content {
+    width: 650px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 2px 2px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+h1{
+    padding-top: 25px;
+    text-align: center;
+    font-size: 30px;
+    color: rgb(19, 74, 19);
+}
+
+h2 {
+    margin-bottom: 10px;
+}
+
+.input-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="date"],
+input[type="skill"],
+select {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+button {
+    margin-left: 270px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+
+/*  */
+/*Phần nội dung */
+.profile{
+    width: 800px;
+    margin: 0 auto;
+    border: 1px solid #3b3a3a;
+    border-radius: 5px;
+    padding-top: 20px;
+    padding: 2px 2px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: #e2f2ea;
+}
+h1{
+    padding-top: 25px;
+    text-align: center;
+    font-size: 30px;
+    color: rgb(19, 74, 19);
+}
+.separator{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+.separator .star{
+    font-size: 24px;
+    color: #00B14F;
+}
+.personal-info{
+    margin: 20px 0;
+}
+.personal-info .avatar{
+    margin-bottom: 10px;
+}
+.personal-info .avatar img{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 100px;
+    height: 100px;
+}
+h2{
+    margin: 0;
+    font-size: 20px;
+    text-align: center;
+}
+.details {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.info-item {
+    width: 49%;
+    padding: 10px;
+}
+.info-item h3 {
+    font-size: 16px;
+    color: #333;
+    border-bottom: 2px solid #7f8180;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+}
+.info-item p {
+    margin: 5px 0;
+    color: #555;
+}
+button {
+    margin-left: 300px;
+    background-color: #e2f2ea;
+    color: rgb(3, 149, 66);
+    padding: 10px 10px;
+    border: 1px solid #00B14F;
+    border-radius: 2px;
+    cursor: pointer;
+}
+.fa-circle-info{
+    color: #017134;
+}
+.fa-briefcase{
+    color: #017134;
+}
+.fa-graduation-cap{
+    color: #017134;
+}
+.fa-pen-fancy{
+    color: #017134;
+}
+.fa-chart-line{
+    color: #017134;
+}
