--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -19,7 +19,7 @@
       li
         a(href=`/${prefixAdmin}/roles/permissions`) Phân quyền
       li
-        a(href=`/${prefixAdmin}/blogs`) Blog
+        a(href=`/${prefixAdmin}/blog`) Blog
       if(role.permissions.includes("accounts_view"))
         li
           a(href=`/${prefixAdmin}/accounts`) Tài khoản
