--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -16,16 +16,16 @@ footer
         h3 Tuy&#x1EC3;n D&#x1EE5;ng
         .acceptance
           // -Chấp thuận
-          a(href='blog.html') Blog
-          a(href='employer.html') Nh&agrave; tuy&#x1EC3;n d&#x1EE5;ng
+          a(href='/blog') Blog
+          a(href='/employer/login') Nh&agrave; tuy&#x1EC3;n d&#x1EE5;ng
       #candidate.col
         h3 &#x1EE8;ng Vi&ecirc;n
         .candidate-detail
           // Chi tiết ứng viên
-          a(href='jobs.html') T&igrave;m c&ocirc;ng vi&#x1EC7;c
-          a(href='register.html') &Dstrok;&abreve;ng k&yacute; t&agrave;i kho&#x1EA3;n
-          a(href='login.html') &Dstrok;&abreve;ng nh&#x1EAD;p t&agrave;i kho&#x1EA3;n
-      #contact.col
+          a(href='/job') T&igrave;m c&ocirc;ng vi&#x1EC7;c
+          a(href='/candidate/register') &Dstrok;&abreve;ng k&yacute; t&agrave;i kho&#x1EA3;n
+          a(href='/candidate/login') &Dstrok;&abreve;ng nh&#x1EAD;p t&agrave;i kho&#x1EA3;n
+      #contact.col 
         h3 Li&ecirc;n H&#x1EC7; V&#x1EDB;i Ch&uacute;ng T&ocirc;i
         .contact-detail
           // Chi tiết liên hệ
