--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -6,11 +6,9 @@ footer
           | We are committed to providing you with the best possible service. Trust us and choose us!
         .social
           // Liên kết truyền thông
-          a(href='#')
+          a(href='https://www.facebook.com/profile.php?id=100044766801358&mibextid=ZbWKwL')
             i.fa-brands.fa-square-facebook
-          a(href='#')
-            i.fa-brands.fa-square-instagram
-          a(href='#')
+          a(href='https://www.tiktok.com/@mpq.qui.03?_t=8n6buY1cYMC&_r=1')
             i.fa-brands.fa-tiktok
       #recruitment.col
         h3 Tuy&#x1EC3;n D&#x1EE5;ng
