--- a/views/admin/pages/blogs/index.pug
+++ b/views/admin/pages/blogs/index.pug
@@ -1,70 +1,75 @@
 extends  ../../layouts/default.pug
 block main
-  h1(class="mb-4") Trang blogs
-    .text-right
-        a(
-            href=`/admin/blog/create`
-            class="btn btn-outline-success"
-        ) + Thêm mới
-  table.table.table-hover.table-sm
-    thead
-      tr
-        th STT
-        th Hình ảnh
-        th Tiêu đề
-        th Trạng thái
-        th Hành động
-    tbody
-     each item, index in blogs
-      tr 
-        td #{index+1}
-        td
-          img(
-            src=item.thumbnail
-            alt=item.title
-            width="100px"
-            height="auto"
+  if(role.permissions.includes("blogs_view"))
+    h1(class="mb-4") Trang blogs
+      .text-right
+        if(role.permissions.includes("blogs_create"))
+          a(
+              href=`/admin/blog/create`
+              class="btn btn-outline-success"
+          ) + Thêm mới
+    table.table.table-hover.table-sm
+      thead
+        tr
+          th STT
+          th Hình ảnh
+          th Tiêu đề
+          th Trạng thái
+          th Hành động
+      tbody
+      each item, index in blogs
+        tr 
+          td #{index+1}
+          td
+            img(
+              src=item.thumbnail
+              alt=item.title
+              width="100px"
+              height="auto"
+            )
+          td #{item.title}
+          if(role.permissions.includes("blogs_status"))
+            td
+              if    (item.status === "active")
+                a(
+                    href="javascript:;"
+                    class="badge badge-success"
+                    data-status="inactive"
+                    data-id=item.id
+                    button-change-status-blog) Hoạt động 
+              else
+                a(
+                    href="javascript:;"
+                    class="badge badge-danger"
+                    data-status="active"
+                    data-id=item.id
+                    button-change-status-blog
+                    ) Dừng hoạt động
+          td
+              a(
+                  class="btn btn-secondary btn-sm"
+                  href=`/${prefixAdmin}/blog/detail/${item.id}`
+              ) Chi tiết
+              if(role.permissions.includes("blogs_edit"))
+                a(
+                    class="btn btn-warning btn-sm ml-1"
+                    href=`/${prefixAdmin}/blog/edit/${item.id}`
+                ) Sửa
+              if(role.permissions.includes("blogs_delete"))
+                button(
+                    class="btn btn-danger btn-sm ml-1"
+                    button-delete-blog
+                    data-id=item.id
+                ) Xóa
+      form(
+          form-change-status-blog
+          method="POST"
+          action=""
+          data-path="/admin/blog/change-status"
           )
-        td #{item.title}
-        td
-          if    (item.status === "active")
-            a(
-                href="javascript:;"
-                class="badge badge-success"
-                data-status="inactive"
-                data-id=item.id
-                button-change-status-blog) Hoạt động 
-          else
-            a(
-                href="javascript:;"
-                class="badge badge-danger"
-                data-status="active"
-                data-id=item.id
-                button-change-status-blog
-                ) Dừng hoạt động
-        td
-            a(
-                class="btn btn-secondary btn-sm"
-                href=`/${prefixAdmin}/blog/detail/${item.id}`
-            ) Chi tiết
-            a(
-                class="btn btn-warning btn-sm ml-1"
-                href=`/${prefixAdmin}/blog/edit/${item.id}`
-            ) Sửa
-            button(
-                class="btn btn-danger btn-sm ml-1"
-                button-delete-blog
-                data-id=item.id
-            ) Xóa
-    form(
-        form-change-status-blog
-        method="POST"
-        action=""
-        data-path="/admin/blog/change-status"
-        )
-    form(
-        form-delete-blog
-        method="POST"
-        action=""
-        data-path="/admin/blog/delete-blog"
-        )
+      form(
+          form-delete-blog
+          method="POST"
+          action=""
+          data-path="/admin/blog/delete-blog"
+          )
