--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -8,7 +8,7 @@ block main
           | FIND 
           br
           | NEW JOB
-        a.btn(href='jobs.html') Show More
+        a.btn(href='/job') Show More
     section.company-container
         h2.company-heading  Đơn tuyển dụng nổi bậc
         .box-container
